2005-08-02	Christian Hergert	<christian.hergert@gmail.com>

	* MonoQuery.prjx: deleted
	* MonoQuery.addin.xml.in: removed
	* Exceptions: removed
	* Services: removed
	* Gui: removed
	* Codons: removed
	* SchemaClass: removed
	* MonoQuery.cmbx: removed
	* Collection: removed
	* MonoQueryView.cs: removed
	* MonoQuery/AssemblyInfo.cs: part of monoquery2
	* MonoQuery/MonoQuery.mds:
	* MonoQuery/Commands:
	* MonoQuery/Commands/Commands.cs:
	* MonoQuery/Makefile.in:
	* MonoQuery/MonoQueryService.cs:
	* MonoQuery/Gui/NodeBuilders/UsersNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ParametersNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/DatabaseNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/TypesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/LanguagesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ProviderCollectionNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ConstraintsNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/AggregatesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/TablesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ViewNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ProceduresNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/OperatorsNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/GroupsNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ColumnsNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/RolesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ConstraintNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/TriggersNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/TableNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ProcedureNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/RulesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/SequencesNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ColumnNodeBuilder.cs:
	* MonoQuery/Gui/NodeBuilders/ViewsNodeBuilder.cs:
	* MonoQuery/Gui/DbProviderCollection.cs:
	* MonoQuery/Gui/SqlDefinitionPad.cs:
	* MonoQuery/Gui/ConnectionDialog.cs:
	* MonoQuery/Gui/FakeNodes.cs:
	* MonoQuery/Gui/DatabasePad.cs:
	* MonoQuery/Gui/DataGridView.cs:
	* MonoQuery/monoquery.glade: